# document-intelligence-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  github-models-smoke.yml  ollama-smoke.yml
alembic/: env.py
alembic/versions/: 20260315_0001_initial_schema.py  20260315_0002_add_document_extracted_text.py  20260315_0003_add_chunk_embedding_metadata.py
fixtures/seed_corpus/: checkout-latency-postmortem-2026-02-18.md  customer-exports-prd.md  oncall-handoff-playbook.md  payments-service-runbook.md  search-platform-adr-004.md  vendor-production-access-policy.md
postman/: document-intelligence-platform.postman_collection.json  local.postman_environment.json
scripts/: check_prereqs.sh  github_models_smoke_test.sh  ollama_smoke_test.sh  seed_local_corpus.py
src/document_intelligence/: __init__.py  app.py  bootstrap.py  config.py  worker_app.py
src/document_intelligence/prompts/: qa_v1.txt  (+2 more)
tests/: conftest.py
tests/integration/: test_document_endpoints.py  test_health_endpoint.py  test_postgres_persistence.py  test_retrieval_endpoints.py
tests/unit/: test_bootstrap_ai_providers.py  test_config_settings.py  test_health_service.py  test_openai_compatible.py
website/: README.md  docusaurus.config.ts  sidebars.ts
website/docs/: architecture.md  decision-log.md  edr-001-local-model-defaults.md  implementation-plan.md  intro.md  local-development.md  manual-testing.md  mvp.md  product-thesis.md  roadmap.md  tech-stack.md  testing-strategy.md
(+54 files in other folders)
