[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-platform"
version = "0.1.0"
description = "Backend scaffold for the document intelligence platform MVP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14,<2.0",
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/document_intelligence"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["document_intelligence"]
